--- a/OpenCV/Camera/Camera/Camera.vcxproj.filters
+++ b/OpenCV/Camera/Camera/Camera.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="camera.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="newcamera.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
