--- a/OpenCV/Camera/Camera/Camera.vcxproj.filters
+++ b/OpenCV/Camera/Camera/Camera.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="newcamera.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="asdf.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
